--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
 
           <ul class="header-list">
             <li class="header-list-item">
-              <a href="./index.html" class="header-list-link">Studio</a>
-              <svg class="svg-hover" width="48" height="4">
-                <use href="./images/icons.svg#icon-hover"></use>
-              </svg>
+              <a href="./index.html" class="header-list-link current">Studio</a>
             </li>
             <li class="header-list-item">
               <a href="" class="header-list-link">Portfolio</a>
@@ -74,13 +71,15 @@
           <h2 class="visually-hidden">section 2</h2>
           <ul class="advantages-list">
             <li class="advantages-list-item">
-              <svg class="svg-advantages">
-                <use
-                  href="./images/icons.svg#icon-antenna-1"
-                  height="64"
-                  width="64"
-                ></use>
-              </svg>
+              <div class="svg-advantages-item">
+                <svg class="svg-advantages">
+                  <use
+                    href="./images/icons.svg#icon-antenna-1"
+                    height="64"
+                    width="64"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Strategy</h3>
               <p class="advantages-text">
                 Our goal is to identify the business problem to walk away with
@@ -88,6 +87,15 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <div class="svg-advantages-item">
+                <svg class="svg-advantages">
+                  <use
+                    href="./images/icons.svg#icon-clock-1"
+                    width="64"
+                    height="64"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Punctuality</h3>
               <p class="advantages-text">
                 Bring the key message to the brand's audience for the best price
@@ -95,6 +103,15 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <div class="svg-advantages-item">
+                <svg class="svg-advantages">
+                  <use
+                    href="./images/icons.svg#icon-diagram-1"
+                    width="64"
+                    height="64"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Diligence</h3>
               <p class="advantages-text">
                 Research and confirm brands that present the strongest digital
@@ -102,6 +119,15 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <div class="svg-advantages-item">
+                <svg class="svg-advantages">
+                  <use
+                    href="./images/icons.svg#icon-astronaut-1"
+                    width="64"
+                    height="64"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Technologies</h3>
               <p class="advantages-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -130,28 +156,36 @@
                 <p class="team-list-text">Product Designer</p>
                 <ul class="team-soc-list">
                   <li class="team-soc-item">
-                    <a href="" class="team-soc-link"></a>
-                    <svg class="team-link-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
-                    </svg>
+                    <a href="" class="team-soc-link">
+                      <svg class="team-link-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram-2"
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="" class="team-soc-link"></a>
-                    <svg class="team-link-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
+                    <a href="" class="team-soc-link">
+                      <svg class="team-link-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-twitter-1"
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="" class="team-soc-link"></a>
-                    <svg class="team-link-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
+                    <a href="" class="team-soc-link">
+                      <svg class="team-link-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-facebook-1"
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="" class="team-soc-link"></a>
-                    <svg class="team-link-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
+                    <a href="" class="team-soc-link">
+                      <svg class="team-link-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-linkedin-1"
+                        ></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -167,6 +201,40 @@
               <div class="team-list-div">
                 <h3 class="team-list-title">Tom Ford</h3>
                 <p class="team-list-text">Frontend Developer</p>
+                <ul class="team-soc-list">
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link">
+                      <svg class="team-link-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram-2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link">
+                      <svg class="team-link-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-twitter-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link">
+                      <svg class="team-link-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-facebook-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link">
+                      <svg class="team-link-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-linkedin-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -180,6 +248,40 @@
               <div class="team-list-div">
                 <h3 class="team-list-title">Camila Garcia</h3>
                 <p class="team-list-text">Marketing</p>
+                <ul class="team-soc-list">
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link">
+                      <svg class="team-link-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram-2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link">
+                      <svg class="team-link-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-twitter-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link">
+                      <svg class="team-link-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-facebook-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link">
+                      <svg class="team-link-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-linkedin-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -193,6 +295,40 @@
               <div class="team-list-div">
                 <h3 class="team-list-title">Daniel Wilson</h3>
                 <p class="team-list-text">UI Designer</p>
+                <ul class="team-soc-list">
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link">
+                      <svg class="team-link-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram-2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link">
+                      <svg class="team-link-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-twitter-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link">
+                      <svg class="team-link-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-facebook-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link">
+                      <svg class="team-link-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-linkedin-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -317,14 +453,41 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="footer-logo-link">
-          Web<span class="logo-link-white">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-div">
+        <div class="footer-promo">
+          <a href="./index.html" class="footer-logo-link">
+            Web<span class="logo-link-white">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-soc">
+        <h3 class="footer-title">Social Media</h3>
+        <ul class="footer-soc-list">
+          <li class="footer-cos-item">
+            <a href="" class="footer-soc-link">
+              <svg class="footer-soc-icon" width="24" height="24">
+                <use href="/images/icons.svg#icon-instagram-2"></use></svg></a>
+          </li>
+          <li class="footer-cos-item">
+            <a href="" class="footer-soc-link">
+              <svg class="footer-soc-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter-1"></use></svg></a>
+          </li>
+          <li class="footer-cos-item">
+            <a href="" class="footer-soc-link">
+              <svg class="footer-soc-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook-1"></use></svg></a>
+          </li>
+          <li class="footer-cos-item">
+            <a href="" class="footer-soc-link">
+              <svg class="footer-soc-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin-1"></use></svg></a>
+          </li>
+        </ul>
+      </div>
       </div>
     </footer>
   </body>
