--- a/index.html
+++ b/index.html
@@ -72,12 +72,8 @@
           <ul class="advantages-list">
             <li class="advantages-list-item">
               <div class="svg-advantages-item">
-                <svg class="svg-advantages">
-                  <use
-                    href="./images/icons.svg#icon-antenna-1"
-                    height="64"
-                    width="64"
-                  ></use>
+                <svg class="svg-advantages" height="64" width="64">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-title">Strategy</h3>
@@ -88,12 +84,8 @@
             </li>
             <li class="advantages-list-item">
               <div class="svg-advantages-item">
-                <svg class="svg-advantages">
-                  <use
-                    href="./images/icons.svg#icon-clock-1"
-                    width="64"
-                    height="64"
-                  ></use>
+                <svg class="svg-advantages" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-title">Punctuality</h3>
@@ -104,12 +96,8 @@
             </li>
             <li class="advantages-list-item">
               <div class="svg-advantages-item">
-                <svg class="svg-advantages">
-                  <use
-                    href="./images/icons.svg#icon-diagram-1"
-                    width="64"
-                    height="64"
-                  ></use>
+                <svg class="svg-advantages" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-title">Diligence</h3>
@@ -120,12 +108,8 @@
             </li>
             <li class="advantages-list-item">
               <div class="svg-advantages-item">
-                <svg class="svg-advantages">
-                  <use
-                    href="./images/icons.svg#icon-astronaut-1"
-                    width="64"
-                    height="64"
-                  ></use>
+                <svg class="svg-advantages" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-title">Technologies</h3>
@@ -340,108 +324,120 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio/1.jpg"
-                alt="Banking App Screenshots"
-                width="360"
-                height="300"
-                class="portfolio-list-img"
-              />
-              <p class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
+              <div class="overlay">
+                <img
+                  src="./images/portfolio/1.jpg"
+                  alt="Banking App Screenshots"
+                  width="360"
+                  height="300"
+                  class="portfolio-list-img"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-div">
                 <h3 class="portfolio-list-title">Banking App</h3>
                 <p class="portfolio-list-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio/2.jpg"
-                alt="QR scanning"
-                width="360"
-                height="300"
-                class="portfolio-list-img"
-              />
-              <p class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
+              <div class="overlay">
+                <img
+                  src="./images/portfolio/2.jpg"
+                  alt="QR scanning"
+                  width="360"
+                  height="300"
+                  class="portfolio-list-img"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-div">
                 <h3 class="portfolio-list-title">Cashless Payment</h3>
                 <p class="portfolio-list-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio/3.jpg"
-                alt="Meditation App on Laptop and Phone screens"
-                width="360"
-                height="300"
-                class="portfolio-list-img"
-              />
-              <p class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
+              <div class="overlay">
+                <img
+                  src="./images/portfolio/3.jpg"
+                  alt="Meditation App on Laptop and Phone screens"
+                  width="360"
+                  height="300"
+                  class="portfolio-list-img"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-div">
                 <h3 class="portfolio-list-title">Meditation App</h3>
                 <p class="portfolio-list-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio/4.jpg"
-                alt="Driver uses taxi app"
-                width="360"
-                height="300"
-                class="portfolio-list-img"
-              />
-              <p class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
+              <div class="overlay">
+                <img
+                  src="./images/portfolio/4.jpg"
+                  alt="Driver uses taxi app"
+                  width="360"
+                  height="300"
+                  class="portfolio-list-img"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-div">
                 <h3 class="portfolio-list-title">Taxi Service</h3>
                 <p class="portfolio-list-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio/5.jpg"
-                alt="Phone with screen Illustrations"
-                width="360"
-                height="300"
-                class="portfolio-list-img"
-              />
-              <p class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
+              <div class="overlay">
+                <img
+                  src="./images/portfolio/5.jpg"
+                  alt="Phone with screen Illustrations"
+                  width="360"
+                  height="300"
+                  class="portfolio-list-img"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-div">
                 <h3 class="portfolio-list-title">Screen Illustrations</h3>
                 <p class="portfolio-list-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio/6.jpg"
-                alt="Girl listening music"
-                width="360"
-                height="300"
-                class="portfolio-list-img"
-              />
-              <p class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
+              <div class="overlay">
+                <img
+                  src="./images/portfolio/6.jpg"
+                  alt="Girl listening music"
+                  width="360"
+                  height="300"
+                  class="portfolio-list-img"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-div">
                 <h3 class="portfolio-list-title">Online Courses</h3>
                 <p class="portfolio-list-text">Marketing</p>
@@ -464,30 +460,34 @@
           </p>
         </div>
         <div class="footer-soc">
-        <h3 class="footer-title">Social Media</h3>
-        <ul class="footer-soc-list">
-          <li class="footer-cos-item">
-            <a href="" class="footer-soc-link">
-              <svg class="footer-soc-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram-2"></use></svg></a>
-          </li>
-          <li class="footer-cos-item">
-            <a href="" class="footer-soc-link">
-              <svg class="footer-soc-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter-1"></use></svg></a>
-          </li>
-          <li class="footer-cos-item">
-            <a href="" class="footer-soc-link">
-              <svg class="footer-soc-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook-1"></use></svg></a>
-          </li>
-          <li class="footer-cos-item">
-            <a href="" class="footer-soc-link">
-              <svg class="footer-soc-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin-1"></use></svg></a>
-          </li>
-        </ul>
-      </div>
+          <p class="footer-soc-title">Social Media</p>
+          <ul class="footer-soc-list">
+            <li class="footer-cos-item">
+              <a href="" class="footer-soc-link">
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use></svg
+              ></a>
+            </li>
+            <li class="footer-cos-item">
+              <a href="" class="footer-soc-link">
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use></svg
+              ></a>
+            </li>
+            <li class="footer-cos-item">
+              <a href="" class="footer-soc-link">
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use></svg
+              ></a>
+            </li>
+            <li class="footer-cos-item">
+              <a href="" class="footer-soc-link">
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
